load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["ClientStream.go"],
    importpath = "github.com/stackb/grpc-starlark/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//mock",
        "@org_golang_google_grpc//metadata",
    ],
)
