load("@rules_proto//proto:defs.bzl", "proto_descriptor_set", "proto_library")

proto_library(
    name = "routeguide_proto",
    srcs = ["routeguide.proto"],
    visibility = ["//visibility:public"],
)

proto_descriptor_set(
    name = "routeguide_proto_descriptor",
    deps = ["routeguide_proto"],
)
