load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "program",
    srcs = ["program.go"],
    importpath = "github.com/stackb/grpc-starlark/pkg/program",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/net",
        "//pkg/os",
        "//pkg/starlarkgrpc",
        "//pkg/thread",
        "@com_github_stripe_skycfg//go/protomodule",
        "@net_starlark_go//lib/proto",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/dynamicpb",
    ],
)

go_test(
    name = "program_test",
    srcs = ["program_test.go"],
    embed = [":program"],
    embedsrcs = [
        "routeguide_proto_descriptor.pb",
        "routeguide.grpc.star",
    ],
    deps = [
        "//pkg/protodescriptorset",
        "@com_github_google_go_cmp//cmp",
        "@net_starlark_go//starlark",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//reflect/protodesc",
    ],
)
