load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "program",
    srcs = [
        "config.go",
        "program.go",
    ],
    importpath = "github.com/stackb/grpc-starlark/pkg/program",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protodescriptorset",
        "//pkg/starlarkcrypto",
        "//pkg/starlarkgrpc",
        "//pkg/starlarknet",
        "//pkg/starlarkos",
        "//pkg/starlarkthread",
        "@com_github_stripe_skycfg//:skycfg",
        "@com_github_stripe_skycfg//go/protomodule",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@net_starlark_go//lib/time",
        "@net_starlark_go//repl",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
    ],
)
