load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protodescriptorset",
    srcs = ["protodescriptorset.go"],
    importpath = "github.com/stackb/grpc-starlark/pkg/protodescriptorset",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
