load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protodescriptorset",
    srcs = ["protodescriptorset.go"],
    importpath = "github.com/stackb/grpc-starlark/pkg/protodescriptorset",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/dynamicpb",
    ],
)

go_test(
    name = "protodescriptorset_test",
    srcs = ["protodescriptorset_test.go"],
    embed = [":protodescriptorset"],
    embedsrcs = ["routeguide_proto_descriptor.pb"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
    ],
)
