load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "starlarkgrpc",
    srcs = [
        "channel.go",
        "client.go",
        "client_stream.go",
        "client_stream_close_send.go",
        "client_stream_recv.go",
        "client_stream_send.go",
        "error.go",
        "handler.go",
        "method_context.go",
        "module.go",
        "server.go",
        "server_recv.go",
        "server_send.go",
        "status.go",
        "stream_context.go",
        "structs.go",
        "symbol.go",
    ],
    importpath = "github.com/stackb/grpc-starlark/pkg/starlarkgrpc",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stripe_skycfg//go/protomodule",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/dynamicpb",
    ],
)

go_test(
    name = "starlarkgrpc_test",
    srcs = ["module_test.go"],
    embed = [":starlarkgrpc"],
    deps = [
        "//pkg/net",
        "//pkg/thread",
        "@com_github_google_go_cmp//cmp",
        "@net_starlark_go//starlark",
    ],
)
