load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "starlarkgrpc",
    srcs = [
        "channel.go",
        "client.go",
        "client_stream.go",
        "context.go",
        "error.go",
        "handler.go",
        "message_descriptor.go",
        "metadata.go",
        "method_descriptor.go",
        "module.go",
        "per_rpc_credentials.go",
        "server.go",
        "server_stream.go",
        "server_transport_stream.go",
        "status.go",
        "stream_client_interceptor.go",
        "stream_iterator.go",
        "structs.go",
        "symbol.go",
        "unary_client_interceptor.go",
    ],
    importpath = "github.com/stackb/grpc-starlark/pkg/starlarkgrpc",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stripe_skycfg//go/protomodule",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/dynamicpb",
    ],
)

go_test(
    name = "starlarkgrpc_test",
    srcs = [
        "client_stream_test.go",
        "module_test.go",
    ],
    embed = [":starlarkgrpc"],
    deps = [
        "//pkg/starlarknet",
        "//pkg/starlarkthread",
        "@com_github_google_go_cmp//cmp",
        "@net_starlark_go//starlark",
        "@org_golang_google_protobuf//reflect/protoregistry",
    ],
)
