load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "starlarknet",
    srcs = [
        "listener.go",
        "module.go",
    ],
    importpath = "github.com/stackb/grpc-starlark/pkg/starlarknet",
    visibility = ["//visibility:public"],
    deps = [
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
    ],
)
