load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "starlarkos",
    srcs = ["module.go"],
    importpath = "github.com/stackb/grpc-starlark/pkg/starlarkos",
    visibility = ["//visibility:public"],
    deps = [
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
    ],
)

go_test(
    name = "starlarkos_test",
    srcs = ["module_test.go"],
    embed = [":starlarkos"],
    deps = [
        "//pkg/moduletest",
        "@net_starlark_go//starlark",
    ],
)
