load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "starlarkthread",
    srcs = ["module.go"],
    importpath = "github.com/stackb/grpc-starlark/pkg/starlarkthread",
    visibility = ["//visibility:public"],
    deps = [
        "@net_starlark_go//lib/time",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
    ],
)

go_test(
    name = "starlarkthread_test",
    srcs = ["module_test.go"],
    embed = [":starlarkthread"],
    deps = [
        "//pkg/moduletest",
        "@net_starlark_go//lib/time",
        "@net_starlark_go//starlark",
    ],
)
